2003-02-07  Ben Wing  <ben@xemacs.org>

	* lread.c (Fload_internal):
	Eliminate printing `done' messages noninteractively since it's now
	obvious which files are loaded by which others.

2003-02-06  Andrew Begel  <abegel@CS.Berkeley.EDU>

         * sysdll.c: Included lisp.h to define needed alloca_array.

2003-02-07  Jerry James  <james@xemacs.org>

	* sysdep.c (strlwr): Return the parameter.
	* sysdep.c (strupr): Ditto.  Depend on !HAVE_STRUPR.

2003-02-07  Ben Wing  <ben@xemacs.org>

	This contains two related changes:

	(1) Fix problems with reentrant calling of lwlib and associated
	    crashes when selecting menu items.
	(2) Improve redisplay handling of preemption.  Turn on lazy lock
	    and hold down page-down or page-up and you'll see what I mean.

	They are related because they both touch on the code that retrieves
	events and handles the internal queues.
	
	* console-msw.h:
	* event-msw.c:
	* event-msw.c (mswindows_unmodalize_signal_maybe):
	* event-msw.c (mswindows_unsafe_pump_events):
	* event-msw.c (mswindows_pump_outstanding_events):
	* event-msw.c (mswindows_need_event_in_modal_loop):
	* event-msw.c (mswindows_drain_windows_queue):
	* event-msw.c (mswindows_need_event):
	* event-msw.c (reinit_vars_of_event_mswindows):
	* event-stream.c (event_stream_protect_modal_loop):
	* events.h:
	* events.h (struct event_stream):
	* menubar-msw.c (struct handle_wm_initmenu):
	* menubar-msw.c (unsafe_handle_wm_initmenupopup):
	* menubar-msw.c (unsafe_handle_wm_initmenu):
	* menubar-msw.c (mswindows_handle_wm_initmenupopup):
	* menubar-msw.c (mswindows_handle_wm_initmenu):
	* menubar-x.c:
	* menubar-x.c (protected_menu_item_descriptor_to_widget_value):
	* menubar-x.c (pre_activate_callback):
	* menubar.h:

	mswindows_protect_modal_loop() has been generalized to
	event_stream_protect_modal_loop(), and moved to event-stream.c.
	mswindows_in_modal_loop ->in_modal_loop likewise.  Changes in
	event-msw.c and menubar-msw.c for the new names and calling format